# ggr-cwl-ipynb-gen

./: .gitignore  .pylintrc  Makefile  README.md  consts.py  data_upload.py  ggr-cwl-ipynb-gen.py  requirements.txt  setup.cfg  setup.py
chipdb_upload/: data_upload.py
examples/: processing_metadata_template.xlsx
ggr_cwl_ipynb_gen/: __init__.py  consts.py  ggr-cwl-ipynb-gen.py
ggr_cwl_ipynb_gen/templates/: cwl_slurm_array_gen.j2
ipynb_gen/: consts.py  main.py
templates/: cwl_json_gen.j2  cwl_slurm_array_gen.j2  download_fastq_files.j2  merge_lanes_fastq.j2
