[metadata]
name = ggr-cwl-ipynb-gen
version = 0.5.0
author = Alejandro Barrera
author_email = alejandro.barrera@duke.edu
description = IPython notebook generator for GGR CWL processing pipelines of genomic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReddyLab/ggr-cwl-ipynb-gen
project_urls =
    Bug Tracker = https://github.com/ReddyLab/ggr-cwl-ipynb-gen/issues
    Source = https://github.com/ReddyLab/ggr-cwl-ipynb-gen/

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
